--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,16 +1,16 @@
-.header {
+.header{
     height: 80px;
-    background-color: #1C2B35;;
+    background-color: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-left: 100px;
     padding-right: 100px;
+    
 }
-
 nav.header a{
     text-decoration: none;
-    color: #FFFFFF;
+    color: white;
     margin-left: 30px;
 }
 nav.header a:hover{
