cart review completed

--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -10,3 +10,17 @@
     gap: 45px;
     margin: 50px;
 }
+@media screen and (max-width : 576px ){
+    .shop-container{
+        color: black;
+        display: grid;
+        grid-template-columns: 1fr ;
+    
+    }
+    .products-container{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 45px;
+        margin: 50px;
+    }
+}
